public class Light extends AbstractTicTacToe {

	public Light() {
		super();
	}

	public static void main(String[] args) {
		Light light = new Light();
		light.setup();
	}
}
