@startuml tictactoe
'https://plantuml.com/class-diagram
!include ../../../libs/libtictactoe/assets/libtictactoe.puml

tictactoe.Dark ..|> libtictactoe.AbstractTicTacToe
tictactoe.Light ..|> libtictactoe.AbstractTicTacToe

package tictactoe {
    class Dark {
        + Dark(size: int, darkMode: boolean)
        + main(args: String[]): void
    }
    class Light {
        + Light()
        + main(args: String[]): void
    }
}

@enduml
